# tapchange_transformator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
studenttask/: StudentTask.py  api_client.py  eSteps.py
tests/: test_studenttask.py
