[project]
name = "studenttask"
version = "1.0.0"
description = "An example solution for the VU Informationstechnik in Smart Grids exercise."
authors = [
    {name = "Dominic Hoffmann", email = "dominic.hoffmann@tuwien.ac.at"},
    {name = "Denis Vystaukin", email = "denis.vystaukin@tuwien.ac.at"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.115.5",
    "loguru>=0.7.2",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pandas-stubs>=2.2.3.241126",
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
studenttask = "studenttask.StudentTask:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "unit: mark unit tests",
    "integration: mark integration tests"
]
pythonpath = ["."]
addopts = "--import-mode=importlib --cov-report term-missing --cov=studenttask"
